# Mog

./: CMakeLists.txt
include/mog/: mog.h
src/: patch.c
